--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "View git diffs in a GitHub-like interface with branch selection",
   "version": "0.0.1",
   "publisher": "knsh14",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/knsh14/difff"
+  },
   "engines": {
     "vscode": "^1.74.0"
   },
